@@ -82,6 +82,7 @@ description and <a href="faq.html">faq.html</a> for the F.A.Q.
   If in doubt, look at the id of the device with lsusb.
   For older kernels apply the patch from the doc directory to your kernel.<br>
   Recompile your kernel and reboot or load/reload the ftdi_sio module.
+  <br>See also our <a href="linux.html">hints for GNU/Linux</a>.
 </ul>
 
 <h3>Perl modules</h3>
